--- a/background.html
+++ b/background.html
@@ -12,11 +12,11 @@
             <p> by Grant Falkner</p>
             <nav>
                 <a href="index.html">1. Home</a>
-                <a href="survay.html">2. Survay (1/2) </a>
+                <a href="survey.html">2. Survey (1/2) </a>
                 <a href="background.html">3. Background</a>
                 <a href="threat.html">4. The Threat to Our River</a>
                 <a href="help.html">5. How To Help</a>
-                <a href="survay.html">6. Survay (2/2)</a>
+                <a href="survey.html">6. Survey (2/2)</a>
             </nav>
         </header>
 
@@ -24,16 +24,11 @@
             <section>
                 <h4>Terminology</h4>
                 <p>
-                    The Colorado River originates in Colorado and flows
-                    through the southestern United States before terminating in the
-                    river's Delta in the Gulf of Mexico.
+                    The Colorado River originates in Colorado and flows through the southeastern United States before terminating in the river's delta in the Gulf of Mexico.
                 </p>
                 <img class="zoom" src="images/river-delta.jpeg" alt="River Delta" style="height: 175px">
                 <p>
-                    If you have heard of the Colorado river before, you may know that the river is divided 
-                    into two main sections. There is an upper basin and a lower basin. The upper basian
-                    consists of Colorado, New Mexico, Utah and Wyoming. The lower basin consists of Arizona,
-                    California, and Nevada
+                    If you have heard of the Colorado River before, you may know that the river is divided into two main sections. There is an upper basin and a lower basin. The upper basian consists of Colorado, New Mexico, Utah and Wyoming. The lower basin consists of Arizona, California, and Nevada.
                 </p>
 
                 <img src="images/basin-map.jpeg" alt="Basin Map">
@@ -44,9 +39,7 @@
                     <div class="content">
                     <h2>1922</h2>
                     <h3>Colorado River Compact</h3>
-                    <p>The Colorado River Compact was the first big piece of legislation put in place to protect the
-                        Colorado River. The Compact was established in 1922 but was not officeially ratified until 1944.
-                        The Colorado River Compact devided the river into two basins and allocated "7.5 million acre-feet of river water annually" to each.
+                    <p>The Colorado River Compact was the first big piece of legislation put in place to protect the Colorado River. The Compact was established in 1922 but was not officially ratified until 1944. The Colorado River Compact divided the river into two basins and allocated "7.5 million acre-feet of river water annually" to each.
                       </p>
                       <!-- https://www.lasvegasnevada.gov/News/Blog/Detail/colorado-river-compact-agreement -->
                     </div>
@@ -55,10 +48,7 @@
                     <div class="content">
                     <h2>1928</h2>
                     <h3>Hoover Dam</h3>
-                    <p>The Hoover Dam began construction durring the Great Depression on the border of Arizona
-                        and Nevada in 1928. The dam was not completed untill 1935. At the time, this was the
-                        largest dam in the world and provided a tons of power to the south eastern United States.
-                        Today, the Hoover Dam is one of many large dams on the Colorado River. 
+                    <p>The Hoover Dam began construction during the Great Depression on the border of Arizona and Nevada in 1928. The dam was not completed until 1935. At the time, this was the largest dam in the world and provided a ton of power to the southeastern United States. Today, the Hoover Dam is one of many large dams on the Colorado River.
                     </p>
                     <!-- https://www.history.com/topics/great-depression/hoover-dam -->
                     </div>
@@ -67,11 +57,7 @@
                     <div class="content">
                     <h2>1944</h2>
                     <h3>US and Mexico Treaty</h3>
-                    <p>Following tension between the US and Mexico governments, a water treaty was established in 1944.
-                        This treaty gave Mexico a "guaranteed annual quantity of 1.5 million acre feet of water from the
-                        Colorado River, plus additional or less deliveries in specific circumstances. This treaty also allowed
-                        for the construction of the Morelos dam on the Mexican border which is used to regulate
-                        the flow of water into Mexico.
+                    <p>Following tension between the US and Mexican governments, a water treaty was established in 1944. This treaty gave Mexico a "guaranteed annual quantity of 1.5 million acre-feet of water from the Colorado River, plus additional or fewer deliveries in specific circumstances. This treaty also allowed for the construction of the Morelos Dam on the Mexican border which is used to regulate the flow of water into Mexico.
                     </p>
                     <!-- https://www.usbr.gov/lc/phoenix/AZ100/1940/mexican_water_treaty.html -->
                     </div>
@@ -80,9 +66,7 @@
                     <div class="content">
                     <h2>2012</h2>
                     <h3>Minute 319</h3>
-                    <p> Minute 319 was a revision to the US and Mexico water treaty which was established in 2012.
-                        This revision allowed for deticated pulse flows of water to be allowed through the dams in
-                        order to restore river ecosystems in Mexico.
+                    <p> Minute 319 was a revision to the US and Mexico water treaty which was established in 2012. This revision allowed for dedicated pulse flows of water to be allowed through the dams in order to restore river ecosystems in Mexico.
                     </p>
                     <!-- https://riversedgewest.org/resource-center/documents/lessons-learned-minute-319-implementation-colorado-river-delta-karen-j -->
                     </div>
