--- a/survey.html
+++ b/survey.html
@@ -2,7 +2,6 @@
     <head>
         <title>Save the CO River</title>
         <link rel="stylesheet" href="common.css">
-        <link rel="stylesheet" href="home.css">
     </head>
     <body>
         <header>
@@ -22,18 +21,8 @@
 
         <article>
             <section>
-                <img class="zoom" src="images/river-on-map.jpeg" alt="River on Map">
-                <p> Welcome! This is an interactive website to explore issues relating to 
-                    the Colorado River.</p>
-
-    
-                <p> Please take some time to view all of the pages to educate yourself on the
-                    threats facing the Colorado River river. Thank you!
-                </p>
-
-                <p>
-                    <b>Note:</b> The pages on this site are intended to be viewed in order but feel free to browse at your own pace.
-                </p>
+                <p>Please take the time to fill out the following survey before and after viewing the website.</p>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe54r7NK6AqV1J6RAE4ApoXetOwBG_K6mfn7Lc_khazO-ViuQ/viewform?embedded=true" width="640" height="1529" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </section>
         </article>
         
